--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,10 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run markdown lint
         run:
-          npm install remark-cli remark-present-lint-consisten
+          npm install remark-cli remark-present-lint-consistent
           npx remark . --use remark-present-lint-consistent --frail
+      - uses: actions/upload-artifact@main
+        with:
+          name: remark-lint-report
+          path: public/
+        
